kubernetes/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lks-apps-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadsim-app
  template:
    spec:
      containers:
      - name: app-staging
        resources:
          requests:
            memory: "256Mi"
            cpu: "512m"
          limits:
            memory: "512Mi"
            cpu: "512m"
